--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -23,4 +23,14 @@ a {
     color: white;
     background: black;
   }
+} */
+
+.logo{
+  transition: .3s;
+}
+.logo:hover{
+  transform: rotate(-9deg) scale(1.2);
+}
+.rotate-180{
+  transform: rotate(180deg);
 }
